# Task-manager

./: .coverage  .gitignore  Makefile  README.md  db.sqlite3  db2.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
fixtures/: labels.json  statuses.json  tasks.json  test_data.json  users.json
labels/: forms.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_created_at.py  0003_alter_label_created_at.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_rename_date_joined_status_created_at.py  0003_alter_status_created_at.py
task_manager/: admin.py  form.py  messages.py  mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/task_manager/: settings.py
task_manager/templates/: base-layout.html  base.html  create.html  delete.html  edit.html  index.html  update.html  user_delete_form.html  user_form.html  user_list.html  user_update_form.html
tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_remove_task_author_task_executor.py  0002_rename_date_joined_task_time_create_task_description_and_more.py  0002_rename_label_labelfortask_labels.py  0002_rename_labels_labelfortask_label_and_more.py  0003_alter_task_author.py  0003_rename_date_joined_task_time_create_task_author_and_more.py  0003_rename_label_task_labels.py  0004_alter_task_author.py  0004_alter_task_labels_delete_labelfortask.py  0004_task_labels.py  (+8 more)
users/: forms.py  mixins.py  tests.py  urls.py  views.py
(+36 files in other folders)
